--- a/config/database.yml
+++ b/config/database.yml
@@ -5,20 +5,34 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: adnalysis_development
+  host: localhost
+  port: 5432
   pool: 5
-  timeout: 5000
+  password:
 
 development:
-  <<: *default
-  database: db/development.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: adnalysis_development
+  host: localhost
+  port: 5432
+  pool: 5
+  password:
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  <<: *default
-  database: db/test.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: adnalysis_test
+  host: localhost
+  port: 5432
+  pool: 5
+  password:
 
 production:
   adapter: postgresql
